--- a/sample-histogram-metadata-tool/build.gradle
+++ b/sample-histogram-metadata-tool/build.gradle
@@ -17,4 +17,5 @@ dependencies {
   compile 'org.hdrhistogram:HdrHistogram:2.1.10'
   compile 'org.jetbrains.kotlin:kotlin-stdlib'
   compile 'com.fasterxml.jackson.core:jackson-databind:2.9.1'
+  compile 'org.tukaani:xz:1.6'
 }
