--- a/sample-histogram-metadata-tool/build.gradle
+++ b/sample-histogram-metadata-tool/build.gradle
@@ -18,4 +18,5 @@ dependencies {
   compile 'org.jetbrains.kotlin:kotlin-stdlib'
   compile 'com.fasterxml.jackson.core:jackson-databind:2.9.1'
   compile 'org.tukaani:xz:1.6'
+  compile 'net.sf.jopt-simple:jopt-simple:5.0.4'
 }
