--- a/sample-histogram-metadata-tool/build.gradle
+++ b/sample-histogram-metadata-tool/build.gradle
@@ -17,6 +17,8 @@ dependencies {
   compile 'org.hdrhistogram:HdrHistogram:2.1.10'
   compile 'org.jetbrains.kotlin:kotlin-stdlib'
   compile 'com.fasterxml.jackson.core:jackson-databind:2.9.1'
+  compile 'com.fasterxml.jackson.datatype:jackson-datatype-guava:2.9.1'
   compile 'org.tukaani:xz:1.6'
   compile 'net.sf.jopt-simple:jopt-simple:5.0.4'
+  compile 'com.google.guava:guava:23.0'
 }
