--- a/sample-histogram-metadata-tool/build.gradle
+++ b/sample-histogram-metadata-tool/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 
 plugins {
   id 'java'
-  id "org.jetbrains.kotlin.jvm" version "1.1.4-3"
+  id "org.jetbrains.kotlin.jvm" version "1.1.51"
 }
 
 repositories {
